iPhone alignment fixes

--- a/styles.css
+++ b/styles.css
@@ -1348,7 +1348,7 @@ footer>div:not(.socials) {
 
 	/* first occurence of the title text*/
 	.timeline-container>div:nth-child(2)>.timeline-text.right {
-		transform: translateY(-150px);
+		transform: translateY(-50px);
 		font-size: 25px;
 		left: -15%;
 	}
@@ -1356,12 +1356,12 @@ footer>div:not(.socials) {
 	/* first occurence of the text box on the left*/
 	.timeline-container>div:nth-child(2)>.timeline-item.left {
 		left: 7%;
-		transform: translateY(-160px);
+		transform: translateY(-80px);
 	}
 
 	/* 1st occurrence text between timeline divider*/
 	.timeline-container>div:nth-child(3) {
-		margin-top: -50px !important;
+		margin-top: -30px !important;
 		font-size: 10px;
 		left: 7%;
 	}
